# use-github-api-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: constants.rs  error.rs  lib.rs  schema.rs  test_utils.rs  utils.rs
src/client/: builder.rs  mod.rs
src/users/: error.rs  mod.rs
tests/: README.md
tests/files/users/contextual_info/: (mojombo,None).json
tests/files/users/current/: ghp_BJKSHKJ3u09uf0.json
tests/files/users/user/: mojombo.json
