[package]
name = "use-github-api"
version = "0.1.0"
authors = ["advaiyalad <advaiya.lad@gmail.com>"]
edition = "2018"
exclude = ["/.github", "/.prettierrc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = "0.11.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
tokio = { version = "1.5.0", features = ["macros"] }

[features]
default = ["auth"]
node_ids = []
auth = []
enterprise = ["auth"] # Auth is required for enterprise GH
